<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Rom Control</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="backup_dialog_title">Backup/Restore RC Settings</string>
    <string name="drop_theme_title">Color-Combo on Dropdown</string>
    <string name="confirm_backup">Backup Settings?</string>
    <string name="ok">OK</string>
    <string name="restore_next_boot">Restore on next boot?</string>
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_restore">Restore Settings?</string>
    <string name="confirm_restore_mm">Do you want RC use Stock Dropdown Color Style preset?</string>
    <string name="confirm_restore_stock">Do you want RC use MM Dropdown Color Style preset?</string>
    <string name="lockscreen_operator_size">LockScreen operator size</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="missing_su">Your device is either not rooted or the app was denied root permissions.\n\nPlease check your root/su status and try again later.</string>
    <string name="exit">Exit App</string>
    <string name="gaining_root">Acquiring root access. Please wait…</string>
    <string name="missing_su_title">Could not get root access</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme_chooser_dialog_title">Choose Theme</string>
    <string name="app_reboot_required_title">Reboot Required</string>
    <string name="app_reboot_required_message">Reboot is required for the changes to take effect.\n\nReboot now?</string>
    <string name="app_reboot_required_message2">Normal reboot is required for the changes to take effect.</string>
    <string name="app_reboot_required_message4">Reboot is required for the changes to take effect.</string>
    <string name="app_reboot_required_message3">Phone will reboot automatically after press this option.</string>
    <string name="summaryOn">On</string>
    <string name="summaryOff">Off</string>
    <string name="battery">Battery</string>
    <string name="battery_settings">Battery Settings</string>
    <string name="battery_summary">Show/Hide battery, battery porcentage and modify your style toggling between Stock/3minit/OG Battery</string>
    <string name="battery_style">Battery Style</string>
    <string name="battery_percentage">Display percentage next to Battery</string>
    <string name="battery_text_color">Battery Text Color</string>
    <string name="colorpicker_summary">Set your desired color</string>
    <string name="stock_battery">1 - Stock Battery Settings</string>
    <string name="og_battery_title">2 - OG Battery Settings</string>
    <string name="minit_battery_title">3 - Minit Battery Settings</string>
    <string name="percentage_in">Percentage inside Battery</string>
    <string name="og_battery">OG Battery</string>
    <string name="og_summary">Choose your favorite battery icon from OG battery app.</string>
    <string name="minit_battery">3Minit Battery</string>
    <string name="minit_summary">Choose your favorite battery icon from Gary Harrington app.</string>
    <string name="battery_bar">Battery Bar</string>
    <string name="battery_bar_settings">Battery Bar Settings</string>
    <string name="battery_bar_summary">Show/Hide battery bar, animate it, change color and style.</string>
    <string name="battery_bar_animation">Battery Bar Animation</string>
    <string name="battery_bar_style">Battery Bar Style</string>
    <string name="battery_thickness">Thickness of Battery Bar</string>
    <string name="battery_bar_color">Battery Bar Color</string>
    <string name="statusbar">StatusBar</string>
    <string name="background_color">Background Color</string>
    <string name="statusbar_icons_color">Icons Color</string>
    <string name="double_tap">Double tap on StatusBar to Lock</string>
    <string name="custom_image">Custom Background StatusBar</string>
    <string name="statusbar_background_color">StatusBar Background Color</string>
    <string name="statusbar_color">StatusBar Color</string>
    <string name="change_statusbar_image">Change StatusBar Background</string>
    <string name="change_statusbar_summary">Change between different Styles</string>
    <string name="Style_1">Style 1</string>
    <string name="Style_2">Style 2</string>
    <string name="Style_3">Style 3</string>
    <string name="Style_4">Style 4</string>
    <string name="Style_5">Style 5</string>
    <string name="Style_6">Style 6</string>
    <string name="Style_7">Style 7</string>
    <string name="Style_8">Style 8</string>
    <string name="clock_and_date">Clock And Date</string>
    <string name="clock_and_date_show">Show Clock and Date</string>
    <string name="clock_position">Clock and Date Position</string>
    <string name="clock_date_settings">Clock And Date Settings</string>
    <string name="clock_summary">Customize your Clock style, Date Style, Colorize, and much more.</string>
    <string name="clock_settings">Clock Settings</string>
    <string name="clock_color">Clock Color</string>
    <string name="clock_style">Clock Style</string>
    <string name="clock_upper">Uppercase for Text Clock</string>
    <string name="clock_ampm">Clock AM/PM</string>
    <string name="clock_font">Clock Font Style</string>
    <string name="clock_size">Clock Size</string>
    <string name="clock_size_summary">Select Clock Size</string>
    <string name="date_settings">Date Settings</string>
    <string name="date_size">Date Display Size</string>
    <string name="date_style">Date Style</string>
    <string name="date_format">Date Format</string>
    <string name="network_speed_title">Network Speed Indicator</string>
    <string name="network_speed_summary">Show/Hide Speed indicator, incoming, outgoing traffic, and more.</string>
    <string name="speed_display">Speed Display Style</string>
    <string name="traffic_pos">Traffic Position</string>
    <string name="display_network_speed">Display Network Speed</string>
    <string name="network_size">Speed Indicator Size</string>
    <string name="traffic_color">Network Speed Color</string>
    <string name="traffic_2line">Network Dual-Line Size</string>
    <string name="traffic_size_summary">Change text size</string>
    <string name="traffic_1line">Network Single-Line Size</string>
    <string name="wifisignaltitle">Wifi-Signal Cluster</string>
    <string name="signaliconchanger">Signal Icon Changer</string>
    <string name="wifiiconchanger">WiFi Icon Changer</string>
    <string name="wifisignalpos">Select WiFi / Signal Position</string>
    <string name="carrier_title">Carrier</string>
    <string name="show_wifi_icon">WiFi Icon</string>
    <string name="show_signal_icon">Signal Icon</string>
    <string name="show_airplane_icon">Airplane Icon</string>
    <string name="custom_carrier_title">Custom Carrier</string>
    <string name="custom_carrier_title_lock">Show Carrier</string>
    <string name="custom_carrier_settings">Custom Carrier Settings</string>
    <string name="custom_carrier_summary">Change your carrier name, Colorize, and more.</string>
    <string name="custom_carrier_color">Custom Carrier Text color</string>
    <string name="custom_carrier_change">Change Custom Carrier</string>
    <string name="Myedittext">Set Custom Text</string>
    <string name="recent_title">Recents Panel</string>
    <string name="recent_on">Custom Recents Wallpaper</string>
    <string name="recent_color">Colorize Recents Wallpapaer</string>
    <string name="recent_colorize">Recents Wallpaper Color</string>
    <string name="recent_change">Change Recents Image</string>
    <string name="recent_style_update">On/Of Custom Recents to Update Changes!</string>
    <string name="ticker_title">Ticker - Heads Up</string>
    <string name="ticker_on">Statusbar Ticker</string>
    <string name="ticker_color">Ticker Text Color</string>
    <string name="ticker_head">Ticker with Heads Up</string>
    <string name="headupnoti">Heads Up Notifications</string>
    <string name="dark_font">Use Dark Fonts</string>
    <string name="dark_font_on">Dark Fonts (Launcher &amp; Weather)</string>
    <string name="hide_sys_icons">Hide icons</string>
    <string name="hide_all">Hide all StatusBar Contents</string>
    <string name="bt_toggle">Bluetooth Icon</string>
    <string name="alarm_toggle">Alarm Icon</string>
    <string name="hidden_buttons">Virtual Recent + Home + Lock button</string>
    <string name="virtual_recent">Recent app button left corner</string>
    <string name="virtual_home">Home button in the middle</string>
    <string name="virtual_lock">Screen lock button right corner</string>
    <string name="custom_statusbar_summary">Choose color, image, transparency</string>
    <string name="custom_statusbar_update">On/Of Custom Header to Update Changes!</string>
    <string name="n_toggles_panel">Number of Toggles on Panel - Columns</string>
    <string name="list_animation">ListView Animation</string>
    <string name="list_interpolator">ListView Interpolator</string>
    <string name="mokee_animations">Mokee Animations</string>
    <string name="number_toggles">Number of Scrollable Toggles</string>
    <string name="hide_toggles">Hide Toggles Text on Dropdown</string>
    <string name="toggles_title">Toggles</string>
    <string name="toggles_back_color">Background Color Picker</string>
    <string name="toggles_color_summary">Use White color for default Color.\nSet transparent color to hide backgrounds.</string>
    <string name="toggles_increase">Increase your Toggles</string>
    <string name="toggles_increase_summary">Change your number of toggles</string>
    <string name="dropdown_header">Dropdown Header</string>
    <string name="custom_header_image">Use Custom Header Image</string>
    <string name="header_color_on">Colorize Header Image</string>
    <string name="header_color">Header Color</string>
    <string name="header_change">Change Header Image</string>
    <string name="hide_notif_content">Hide notification area</string>
    <string name="hide_sys_area">Hide system icons area</string>
    <string name="drop_clock_format">Dropdown Clock Format</string>
    <string name="adv_pwer">Advanced Power Menu</string>
    <string name="pwer_off">Power Off</string>
    <string name="data">Data network switch</string>
    <string name="flight">Flight mode</string>
    <string name="restart">Restart</string>
    <string name="scrshot">Screenshot</string>
    <string name="flash">Flashlight</string>
    <string name="record">Record</string>
    <string name="emergency">Emergency mode</string>
    <string name="ring">Ring Pattern option</string>
    <string name="home_key_1">Home Key Long Press</string>
    <string name="home_key_2">Customize the long press HOME key behavior</string>
    <string name="home_key_3">Menu Key</string>
    <string name="home_key_4">Menu Key Long Press</string>
    <string name="home_key_5">Customize the long press Menu key behavior</string>
    <string name="home_key_6">Back Key</string>
    <string name="home_key_7">Back Key Long Press</string>
    <string name="home_key_8">Customize the long press back key behavior</string>
    <string name="home_key_9">Volume Key (Flashlight)</string>
    <string name="home_key_10">Lock screen flashlight</string>
    <string name="home_key_11">Long press on the volume button to turn-on the flashlight on Lockscreen</string>
    <string name="home_key_12">Timeout</string>
    <string name="home_key_13">The time-out of the flashlight on Lockscreen</string>
    <string name="home_key_14">Home Key</string>
    <string name="home_key_15">Double Home Shortcut</string>
    <string name="home_key_16">Double Home Custom App</string>
</resources>